syntax="proto3";

package calculator;
option go_package="grpc_tutorial/calculator/proto";

message CalculatorRequest{
    int32 first_number = 1;
    int32 second_number = 2;
}

message CalculatorResponse{
    int32 result = 1;
}

message PrimeRequest{
    int32 number=1;
}

message PrimeResponse{
    int32 output=1;
}


message AvgRequest{
    int32 number=1;
}

message AvgResponse{
    double average_result=1;
}


message MaxRequest{
    int32 number=1;
}

message MaxResponse{
    int32 result=1;
}


message SQRTRequest{
    int32 number=1;
}

message SQRTResponse{
    int32 result=2;
}
service CalculatorService{
    rpc Sum(CalculatorRequest) returns (CalculatorResponse) {};
    rpc Primes(PrimeRequest) returns (stream PrimeResponse){};
    rpc CalculateAvg(stream AvgRequest) returns ( AvgResponse){};
    rpc MaxAPI(stream MaxRequest) returns (stream MaxResponse){};
    rpc SQRT(SQRTRequest) returns (SQRTResponse){};
}

